--- a/source/modules/_header.pug
+++ b/source/modules/_header.pug
@@ -32,6 +32,6 @@ mixin header()
         span.user__avatar
           img(src="images/user-avatar.jpg", alt="avatar")
       .dropdown-menu(aria-labelledby="dropdownMenuButton")
-        a.dropdown-item(href="#") Action
-        a.dropdown-item(href="#") Another action
+        a.dropdown-item(href="#") Action Demo1
+        a.dropdown-item(href="#") Another action Test 2
         a.dropdown-item(href="#") Something else here
