--- a/source/modules/_sidebar.pug
+++ b/source/modules/_sidebar.pug
@@ -2,5 +2,5 @@ mixin sidebar({category, currentPage})
   nav.navbar.flex-column.sidebar.js-sidebar-collapse(id="sidebarAccordion")
     .navbar__container
       +menu(menu.data, category, currentPage)
-      h3.navbar__heading Documentation
+      h3.navbar__heading Documentation Demo 1
       +menu(menu2.data, category, currentPage)
