--- a/source/EX-01-home.pug
+++ b/source/EX-01-home.pug
@@ -21,7 +21,7 @@ block main
           }
         .col-6
           .card
-            .card-header Devices
+            .card-header Devices Nhan bald fdkfd
             .card-body
               .devices-chart
                 canvas.js-doughnut-chart(
@@ -29,5 +29,44 @@ block main
                   height="250px"
                   data-setdata= devicesData
                 )
-
+        .col-6
+          .card
+            .card-header Devices Nhan bald fdkfd
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan bald fdkfd
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan bald fdkfd
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan bald fdkfd
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
         
