--- a/source/modules/_header.pug
+++ b/source/modules/_header.pug
@@ -33,5 +33,5 @@ mixin header()
           img(src="images/user-avatar.jpg", alt="avatar")
       .dropdown-menu(aria-labelledby="dropdownMenuButton")
         a.dropdown-item(href="#") Action Demo1
-        a.dropdown-item(href="#") Another action Test 2
+        a.dropdown-item(href="#") Another action Demo
         a.dropdown-item(href="#") Something else here
