--- a/source/EX-01-home.pug
+++ b/source/EX-01-home.pug
@@ -19,15 +19,24 @@ block main
               }
             ]
           }
-        .col-6
-          .card
-            .card-header Devices
-            .card-body
-              .devices-chart
-                canvas.js-doughnut-chart(
-                  width="300px"
-                  height="250px"
-                  data-setdata= devicesData
-                )
-
-        
+        -
+          var devicesData2 = {
+            labels: ["Desktop", "Tablet", "Mobile"],
+            datasets: [
+              {
+                backgroundColor: ["#2C7BE5", "#A6C5F7", "#D2DDEC"],
+                data: [60, 25, 15]
+              }
+            ]
+          }
+        -
+          var devicesData3 = {
+            labels: ["Desktop", "Tablet", "Mobile"],
+            datasets: [
+              {
+                backgroundColor: ["#2C7BE5", "#A6C5F7", "#D2DDEC"],
+                data: [60, 25, 15]
+              }
+            ]
+          }
+ 
