task #2105 edit-home_page

--- a/source/EX-03-alternative.pug
+++ b/source/EX-03-alternative.pug
@@ -10,3 +10,10 @@ block sidebar
 block main
   .main
     h2 Alternative 
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
