task #1234 edit alternative

--- a/source/EX-03-alternative.pug
+++ b/source/EX-03-alternative.pug
@@ -10,10 +10,14 @@ block sidebar
 block main
   .main
     h2 Alternative 
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
-    h3.my-3 Hover use transition, transition origin, transition-delay + transform: translateY()
+    h3.my-3 Hover use Scale  h3.my-3 Hover use Scale  h3.my-3 Hover use Scale  h3.my-3 Hover use Scale  h3.my-3 Hover use Scale 
+    .col-6
+        .card
+          .card-header Devices Nhan dgagdafga
+          .card-body
+            .devices-chart
+              canvas.js-doughnut-chart(
+                width="300px"
+                height="250px"
+                data-setdata= devicesData
+              )
