--- a/source/EX-01-home.pug
+++ b/source/EX-01-home.pug
@@ -19,23 +19,53 @@ block main
               }
             ]
           }
-        -
-          var devicesData2 = {
-            labels: ["Desktop", "Tablet", "Mobile"],
-            datasets: [
-              {
-                backgroundColor: ["#2C7BE5", "#A6C5F7", "#D2DDEC"],
-                data: [60, 25, 15]
-              }
-            ]
-          }
-        -
-          var devicesData3 = {
-            labels: ["Desktop", "Tablet", "Mobile"],
-            datasets: [
-              {
-                backgroundColor: ["#2C7BE5", "#A6C5F7", "#D2DDEC"],
-                data: [60, 25, 15]
-              }
-            ]
-          }
+        .col-6
+          .card
+            .card-header Devices Nhan bla bla ddd
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan dgagdafga
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan dgagdafga
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan dgagdafga
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
+        .col-6
+          .card
+            .card-header Devices Nhan dgagdafga
+            .card-body
+              .devices-chart
+                canvas.js-doughnut-chart(
+                  width="300px"
+                  height="250px"
+                  data-setdata= devicesData
+                )
